--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "js-yaml": "^3.5.3"
+    "js-yaml": "^3.5.3",
+    "multicast-dns": "^6.0.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0"
