--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "js-yaml": "^3.5.3",
-    "multicast-dns": "^6.0.0"
+    "multicast-dns": "git+ssh://git@github.com:mafintosh/multicast-dns.git#d87efa1bbc03dec598a8058240204a11c1fd7508" 
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0"
