--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "iproute": "^0.7.0",
     "js-yaml": "^3.5.3",
-    "multicast-dns": "^6.0.0"
+    "multicast-dns": "^6.0.0",
+    "subcmd": "^1.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0"
