--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "iproute": "^0.7.0",
     "js-yaml": "^3.5.3",
     "multicast-dns": "^6.0.0",
-    "subcmd": "^1.0.1"
+    "subcmd": "^1.0.1",
+    "network-address": "^1.1.0",
+    "prettyjson": "^1.1.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0"
