--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "multicast-dns": "^6.0.0",
     "subcmd": "^1.0.1",
     "network-address": "^1.1.0",
-    "prettyjson": "^1.1.3"
+    "prettyjson": "^1.1.3",
+    "async": "^1.5.2",
+    "request": "^2.69.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0"
