--- a/package.json
+++ b/package.json
@@ -23,11 +23,21 @@
     "network-address": "^1.1.0",
     "prettyjson": "^1.1.3",
     "async": "^1.5.2",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "cccf-docker-instructions": "^3.1.1",
+    "object.assign": "^4.0.3",
+    "cccf-diff": "^3.0.2",
+    "ora": "^0.1.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
     "ava": "^0.12.0",
-    "chokidar": "^1.4.3"
+    "chokidar": "^1.4.3",
+    "babel-register": "^6.5.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
