--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "cccf-docker-instructions": "^3.1.1",
     "object.assign": "^4.0.3",
     "cccf-diff": "^3.0.2",
-    "ora": "^0.1.1"
+    "ora": "^0.1.1",
+    "cli-table": "^0.3.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
