--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zombiec0rn/zombie-node-format": "^1.0.1",
+    "@zombiec0rn/zombie-service-diff": "^1.0.1",
+    "@zombiec0rn/zombie-service-format": "^1.0.2",
+    "async": "^1.5.2",
+    "cccf-docker-instructions": "^3.1.1",
+    "cli-table": "^0.3.1",
     "iproute": "^0.7.0",
     "js-yaml": "^3.5.3",
     "multicast-dns": "^6.0.0",
-    "subcmd": "^1.0.1",
     "network-address": "^1.1.0",
-    "prettyjson": "^1.1.3",
-    "async": "^1.5.2",
-    "request": "^2.69.0",
-    "cccf-docker-instructions": "^3.1.1",
     "object.assign": "^4.0.3",
-    "cccf-diff": "^3.0.2",
     "ora": "^0.1.1",
-    "cli-table": "^0.3.1"
+    "prettyjson": "^1.1.3",
+    "request": "^2.69.0",
+    "subcmd": "^1.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
