--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multicast-dns": "^6.0.0",
     "network-address": "^1.1.0",
     "object.assign": "^4.0.3",
+    "object.values": "^1.0.3",
     "ora": "^0.1.1",
     "prettyjson": "^1.1.3",
     "request": "^2.69.0",
