Fixed imports and colors and things

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@zombiec0rn/zombie-service-format": "^1.0.2",
     "async": "^1.5.2",
     "cccf-docker-instructions": "^3.1.1",
+    "chalk": "^1.1.1",
     "cli-table": "^0.3.1",
+    "colors": "^1.1.2",
     "iproute": "^0.7.0",
     "js-yaml": "^3.5.3",
     "multicast-dns": "^6.0.0",
