--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "colors": "^1.1.2",
     "iproute": "^0.7.0",
     "js-yaml": "^3.5.3",
+    "lodash.uniq": "^4.2.0",
     "multicast-dns": "^6.0.0",
     "network-address": "^1.1.0",
     "object.assign": "^4.0.3",
@@ -37,10 +38,11 @@
     "subcmd": "^1.0.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.5.0",
     "ava": "^0.12.0",
-    "chokidar": "^1.4.3",
-    "babel-register": "^6.5.2"
+    "babel-preset-es2015": "^6.5.0",
+    "babel-register": "^6.5.2",
+    "bytes": "^2.3.0",
+    "chokidar": "^1.4.3"
   },
   "keywords": [
     "zombie-swarm",
