--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "colors": "^1.1.2",
     "iproute": "^0.7.0",
     "js-yaml": "^3.5.3",
+    "lodash.find": "^4.2.0",
     "lodash.uniq": "^4.2.0",
     "multicast-dns": "^6.0.0",
     "network-address": "^1.1.0",
@@ -35,6 +36,7 @@
     "object.values": "^1.0.3",
     "ora": "^0.1.1",
     "prettyjson": "^1.1.3",
+    "random-string": "^0.1.2",
     "request": "^2.69.0",
     "subcmd": "^1.0.1"
   },
