Updated readme and locked down dep versions

--- a/package.json
+++ b/package.json
@@ -17,36 +17,36 @@
   "author": "Asbjorn Enge <asbjorn@hanafjedle.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@zombiec0rn/zombie-node-format": "^1.0.1",
-    "@zombiec0rn/zombie-scheduler": "^2.0.0",
-    "@zombiec0rn/zombie-service-diff": "^2.0.0",
-    "@zombiec0rn/zombie-service-format": "^1.0.2",
-    "async": "^1.5.2",
-    "cccf-docker-instructions": "^3.1.1",
-    "chalk": "^1.1.1",
-    "cli-table": "^0.3.1",
-    "clone": "^1.0.2",
-    "colors": "^1.1.2",
-    "iproute": "^0.7.0",
-    "js-yaml": "^3.5.3",
-    "lodash.find": "^4.2.0",
-    "lodash.uniq": "^4.2.0",
-    "multicast-dns": "^6.0.0",
-    "network-address": "^1.1.0",
-    "object.assign": "^4.0.3",
-    "object.values": "^1.0.3",
-    "ora": "^0.1.1",
-    "prettyjson": "^1.1.3",
-    "random-string": "^0.1.2",
-    "request": "^2.69.0",
-    "subcmd": "^1.0.1"
+    "@zombiec0rn/zombie-node-format": "1.0.1",
+    "@zombiec0rn/zombie-scheduler": "2.0.0",
+    "@zombiec0rn/zombie-service-diff": "2.0.0",
+    "@zombiec0rn/zombie-service-format": "1.0.2",
+    "async": "1.5.2",
+    "cccf-docker-instructions": "3.1.1",
+    "chalk": "1.1.1",
+    "cli-table": "0.3.1",
+    "clone": "1.0.2",
+    "colors": "1.1.2",
+    "iproute": "0.7.0",
+    "js-yaml": "3.5.3",
+    "lodash.find": "4.2.0",
+    "lodash.uniq": "4.2.0",
+    "multicast-dns": "6.0.0",
+    "network-address": "1.1.0",
+    "object.assign": "4.0.3",
+    "object.values": "1.0.3",
+    "ora": "0.1.1",
+    "prettyjson": "1.1.3",
+    "random-string": "0.1.2",
+    "request": "2.69.0",
+    "subcmd": "1.0.1"
   },
   "devDependencies": {
-    "ava": "^0.12.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-register": "^6.5.2",
-    "bytes": "^2.3.0",
-    "chokidar": "^1.4.3"
+    "ava": "0.12.0",
+    "babel-preset-es2015": "6.5.0",
+    "babel-register": "6.5.2",
+    "bytes": "2.3.0",
+    "chokidar": "1.4.3"
   },
   "keywords": [
     "zombie-swarm",
